# ml_collections

./: .gitignore  AUTHORS  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pytest_and_autopublish.yml  python-package.yml  python-publish.yml
docs/: Makefile  README.md  conf.py  config_dict.rst  config_dict_examples.rst  config_flags.rst  config_flags_examples.rst  index.rst  requirements.txt  testing.md
ml_collections/: AUTHORS  BUILD  WORKSPACE  __init__.py  conftest.py  test.sh
ml_collections/config_dict/: BUILD  __init__.py  config_dict.py
ml_collections/config_dict/examples/: BUILD  config.py  config_dict_advanced.py  config_dict_basic.py  config_dict_initialization.py  config_dict_lock.py  config_dict_placeholder.py  examples_test.py  field_reference.py  frozen_config_dict.py
ml_collections/config_dict/tests/: BUILD  config_dict_test.py  field_reference_test.py  frozen_config_dict_test.py
ml_collections/config_flags/: BUILD  __init__.py  config_flags.py  config_path.py  tuple_parser.py
ml_collections/config_flags/examples/: BUILD  config.py  define_config_dataclass_basic.py  define_config_dict_basic.py  define_config_file_basic.py  examples_test.py  parameterised_config.py
ml_collections/config_flags/tests/: BUILD  config_overriding_test.py  config_path_test.py  configdict_config.py  dataclass_overriding_test.py  fieldreference_config.py  importerror_config.py  ioerror_config.py  literal_config.py  mini_config.py  mock_config.py  parameterised_config.py  spork.py  tuple_parser_test.py  typeerror_config.py  valueerror_config.py
